<resources>
    <string name="app_name">GitHub Explorer</string>
    <string name="preference_file_key">Android Engineer CodeCheck Pref</string>
    <string name="searchInputText_hint">GitHub のリポジトリを検索できるよー</string>
    <string name="exit">Exit</string>
    <string name="search_input_empty_error">Please enter value before submit</string>
    <string name="network_error">No Internet</string>

    <!-- Fragment Labels -->
    <string name="menu_home">Home</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_settings">Settings</string>
    <string name="account_details">Account Details</string>
    <string name="web_profile">Web Profile</string>

    <string name="details">Details</string>
    <string name="web_profile_view_details">Web Profile</string>
    <string name="select_app_language">App Language</string>

    //TextView Labels
    <string name="change_language">Change Language</string>
    <string name="welcomePageContent">Explore the world of GitHub like never before with GitHub Explorer, your all-in-one companion for discovering, managing, and staying connected with your favorite GitHub accounts.</string>
    <string name="progressing">Progressing.....</string>
    <string name="exit_confirmation_message">Do you want to exit?</string>
    <string name="add_fav_confirmation_message">Do you want to add to favourites?</string>
    <string name="remove_fav_confirmation_message">Do you want to remove this from favourites?</string>
    <string name="data_already_exist">Data already exists</string>
    <string name="add_fav_success_message">The account was added to favourites successfully</string>
    <string name="delete_fav_success_message">The account was deleted from favourites successfully</string>

    //Button Labels
    <string name="next">Next</string>
    <string name="welcomePageTitle">Welcome to GitHub Explorer!</string>
    <string name="english">English</string>
    <string name="japanese">日本語</string>
    <string name="ok">OK</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>

    <!-- Image content Descriptions -->
    <string name="app_logo">App Logo</string>
    <string name="default_image_for_list">Default Image for recycle view</string>
    <string name="back_button_image">Action Bar back button image</string>
    <string name="alert_dialog_image">Alert Dialog Icon</string>
    <string name="progress_dialog_image">Progress Dialog Icon</string>
    <string name="favourite_button_image">Favourite button Icon</string>
    <string name="forward_arrow_icon">Forward Arrow Icon</string>
    <string name="fav_delete_icon">Favourite Delete Icon</string>
    <string name="radio_button_custom_icon">Radio Button Icon</string>
    <string name="welcome_page_bottomAvatar">Welcome Page Bottom Image</string>

    <!-- Details Page Resource Values -->
    <string name="view_more">View More</string>
    <string name="starts">Starts</string>
    <string name="forks">Forks</string>
    <string name="watchers">Watchers</string>
    <string name="open_issues">Open Issues</string>
    <string name="language">Language</string>

</resources>